--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -1,58 +1,108 @@
 :root {
-  --text: rgb(237, 235, 232);
-  --background: rgb(20, 18, 16);
-  --primary: rgb(192, 184, 175);
-  --primary-60: rgba(192, 184, 175, 0.6);
+     --text: rgb(237, 235, 232);
+     --background: rgb(20, 18, 16);
+     --primary: rgb(192, 184, 175);
+     --primary-60: rgba(192, 184, 175, 0.6);
 
-  --secondary: rgb(77, 91, 72);
-  --secondary-60: rgba(77, 91, 72, 0.6);
-  --accent: rgb(121, 150, 123);
+     --secondary: rgb(77, 91, 72);
+     --secondary-60: rgba(77, 91, 72, 0.6);
+     --accent: rgb(121, 150, 123);
 
-  /* card  Colours  Would be an array in JavaScript*/
+     /* card  Colours  Would be an array in JavaScript*/
 }
 
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  -webkit-font-smoothing: antialiased;
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+     scroll-behavior: smooth;
+     -webkit-font-smoothing: antialiased;
 }
 
-body{
+body {
      font-family: "Lato", sans-serif;
      height: 100vh;
      background-color: var(--background);
 }
 
-.Container{
+.Container {
      display: grid;
      height: 100%;
-     grid-template-rows: 100px 1fr 150px ;
+     grid-template-rows: 100px 1fr 150px;
      grid-template-areas: "mainHeader" "mainContent" "manFooter";
 
 }
 
-.Container .mainHeader{
-     grid-area:mainHeader ;
+.Container .mainHeader {
+     grid-area: mainHeader;
      width: 100%;
      height: 100%;
-     border-bottom: 2px solid var(--secondary-60) ;
+     border-bottom: 2px solid var(--secondary-60);
 }
 
-.Container .mainContent{
-     grid-area:mainContent ;
+.Container .mainContent {
+     grid-area: mainContent;
      width: 100%;
      height: 100%;
 }
 
 
-.Container .manFooter{
-     grid-area:manFooter ;
+.Container .manFooter {
+     grid-area: manFooter;
      width: 100%;
      height: 100%;
-     border-top: 2px solid var(--secondary-60) ;
+     border-top: 2px solid var(--secondary-60);
+}
+
+.mainHeader nav {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+}
+
+.mainHeader nav .left-nav {
+     margin-top: 22px;
+     width: 30%;
+     /* display: flex;
+     width: 20%;
+     padding: 25px 1%; */
+     /* height: 20%; */
+     /* align-items: center; */
+
+     /* justify-content: space-between; */
+}
+
+.left-nav img {
+     /* display: flex;
+     justify-content: space-between; */
+     width: 10%;
+     height: auto;
+     float: left;
+     margin-right: 5%;
+
+}
+
+.left-nav {}
+
+.left-nav h2 {
+     color: wheat;
+}
+
+.right-nav {
+     width: 20%;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+}
+
+.right-nav img {
+     width: 10%;
+     height: auto;
+}
+
+.right-nav h2 {
+     color: wheat;
 }
 
 
@@ -62,6 +112,4 @@ body{
 
 /* Media queries */
 
-@media only screen and (min-width: 560px) {
-
-}
+@media only screen and (min-width: 560px) {}
