--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -10,6 +10,8 @@
 
   /* card  Colours  Would be an array in JavaScript*/
 }
+/* This is a Google font for the icon or logo */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
 
  /* Resetting styles */
 * {
@@ -50,6 +52,10 @@ body{
      height: 100%;
      border-bottom: 2px solid var(--secondary-60) ;
 }
+.Container .mainHeader .Navigation span{
+     font-family: "Dancing Script", cursive;
+     color: var(--accent);
+}
 
 .Container .mainContent{
      grid-area:mainContent ;
@@ -89,6 +95,13 @@ body{
      justify-content: center;
      align-items: center;
      gap: 3px;
+}
+.cartBoxA{
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     align-items: center;
+
 }
 .cartBox h3{
      font-size: 1.5rem;
