--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -10,10 +10,12 @@
 
      /* card  Colours  Would be an array in JavaScript*/
 }
+
 /* This is a Google font  */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
- /* Resetting styles */
+
+/* Resetting styles */
 * {
      margin: 0;
      padding: 0;
@@ -21,11 +23,13 @@
      scroll-behavior: smooth;
      -webkit-font-smoothing: antialiased;
 }
-a{
+
+a {
      color: var(--text);
      text-decoration: none;
 
 }
+
 li {
      list-style: none;
 }
@@ -52,7 +56,8 @@ body {
      height: 100%;
      border-bottom: 2px solid var(--secondary-60);
 }
-.Container .mainHeader .Navigation span{
+
+.Container .mainHeader .Navigation span {
      font-family: "Dancing Script", cursive;
      color: var(--accent);
 }
@@ -71,105 +76,109 @@ body {
      border-top: 2px solid var(--secondary-60);
 }
 
-.mainHeader nav {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-}
-
-.mainHeader nav .left-nav {
-     /* margin-top: 22px; */
-     /* width: 30%; */
-     display: flex;
-     width: 20%;
-     padding: 25px 1%;
-
-     /* height: 20%; */
-     /* align-items: center; */
-
-     justify-content: left;
-}
-
-.left-nav img {
-     /* display: flex;
-     justify-content: left; */
-     width: 10%;
-     height: auto;
-
-     /* margin-right: 5%; */
-     margin-right: 10px;
-
-}
-
-.left-nav {}
-
-.left-nav h2 {
-     color: wheat;
-}
-
-.right-nav {
-     width: 20%;
-     display: flex;
-     align-items: center;
-     justify-content: right;
-}
-
-.right-nav img {
-     width: 10%;
-     height: auto;
-     margin-right: 10px;
-}
-
-.right-nav h2 {
-     color: wheat;
-     margin-right: 20px;
-}
-
 /* Header styles */
-.mainHeader{
+.mainHeader {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
 
 }
-.subHeader{
+
+.subHeader {
      position: relative;
      display: flex;
      flex-direction: row;
      width: 98%;
 
 }
-.subHeader .Navigation{
-     flex: 1 ;
+
+.subHeader .Navigation {
+     flex: 1;
 }
-.cartBox{
+
+.cartBox {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      gap: 3px;
 }
-.cartBoxA{
+
+.cartBoxA {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
 
 }
-.cartBox h3{
+
+.cartBox h3 {
      font-size: 1.5rem;
 
 }
 
 
 /* This is for the main audio */
-.audioMain{
+.audioMain {
      visibility: hidden;
 }
 
+.itemContainer {
+     padding: 3px;
+     display: grid;
+     grid-template-rows: 1fr 65px;
+     width: 225px;
+     height: 250px;
+     border: 1px solid var(--primary);
+     border-radius: 6px;
 
+}
 
+.itemImage {
+     width: 100%;
+     height: 100%;
+     background-color: aqua;
+     border-radius: 6px;
+}
+
+.itemContent {
+     width: 100%;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+     gap: 15px;
+}
+
+.itemContent button {
+     padding-left: 4px;
+     padding-right: 4px;
+     padding-bottom: 2px;
+     padding-top: 2px;
+     background-color: var(--primary);
+     border: none;
+     border-radius: 12px;
+     text-align: center;
+     font-size: 1rem;
+}
+
+.itemTitle {
+     display: block;
+     font-size: 1.2rem;
+}
+
+.itemDetails {
+     /* margin-top: 15px; */
+     display: flex;
+     flex-direction: row;
+     gap: 4px;
+
+     align-items: center;
+}
+
+.itemDetails p {
+     flex: 1;
+}
 
 /* Media queries */
 
