--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -45,17 +45,12 @@ body {
 .Container {
      display: grid;
      height: 100%;
-     grid-template-rows: 100px 1fr 150px;
+     grid-template-rows: auto 1fr auto;
      grid-template-areas: "mainHeader" "mainContent" "manFooter";
 
 }
 
-.Container .mainHeader {
-     grid-area: mainHeader;
-     width: 100%;
-     height: 100%;
-     border-bottom: 2px solid var(--secondary-60);
-}
+
 
 .Container .mainHeader .Navigation span {
      font-family: "Dancing Script", cursive;
@@ -68,20 +63,27 @@ body {
      height: 100%;
 }
 
-
+/* Footer styles */
 .Container .manFooter {
      grid-area: manFooter;
      width: 100%;
-     height: 100%;
+     height: 150px;
      border-top: 2px solid var(--secondary-60);
 }
 
 /* Header styles */
-.mainHeader {
+.Container .mainHeader {
+     grid-area: mainHeader;
+     position: relative;
      display: flex;
-     flex-direction: column;
      justify-content: center;
      align-items: center;
+     width: 100%;
+     height: 100px;
+
+     background-color: var(--background);
+     
+     border-bottom: 2px solid var(--secondary-60);
 
 }
 
@@ -124,61 +126,7 @@ body {
      visibility: hidden;
 }
 
-.itemContainer {
-     padding: 3px;
-     display: grid;
-     grid-template-rows: 1fr 65px;
-     width: 225px;
-     height: 250px;
-     border: 1px solid var(--primary);
-     border-radius: 6px;
 
-}
-
-.itemImage {
-     width: 100%;
-     height: 100%;
-     background-color: aqua;
-     border-radius: 6px;
-}
-
-.itemContent {
-     width: 100%;
-     height: 100%;
-     display: flex;
-     flex-direction: column;
-     gap: 15px;
-}
-
-.itemContent button {
-     padding-left: 4px;
-     padding-right: 4px;
-     padding-bottom: 2px;
-     padding-top: 2px;
-     background-color: var(--primary);
-     border: none;
-     border-radius: 12px;
-     text-align: center;
-     font-size: 1rem;
-}
-
-.itemTitle {
-     display: block;
-     font-size: 1.2rem;
-}
-
-.itemDetails {
-     /* margin-top: 15px; */
-     display: flex;
-     flex-direction: row;
-     gap: 4px;
-
-     align-items: center;
-}
-
-.itemDetails p {
-     flex: 1;
-}
 
 /* Media queries */
 
