Authentication system works 80%

--- a/CSS/cartPage.css
+++ b/CSS/cartPage.css
@@ -10,3 +10,7 @@
 
      /* card  Colours  Would be an array in JavaScript*/
 }
+h1{
+     color: var(--background);
+     background-color: var(--accent);
+}
