--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -40,6 +40,10 @@ body {
      background-color: var(--background);
      color: var(--text);
      min-width: 500px;
+     transition: all 200ms ease-in-out;
+}
+.pageTransition{
+     filter: blur(10px);
 }
 
 .Container {
