--- a/CSS/cartPage.css
+++ b/CSS/cartPage.css
@@ -141,7 +141,9 @@
   color: black;
 }
 .customer-row input {
-  width: 150px;
+  width: 250px;
+  padding: 2px;
+  font-size: 18px;
   border-radius: 2px;
   background-color: transparent;
   border: 0.5px solid rgba(0, 0, 0, 0.2);
@@ -155,9 +157,9 @@
   font-weight: bold;
 }
 
-.value {
-  text-align: right;
-}
+
+
+
 
 hr {
   border: 1px solid #ddd;
