--- a/CSS/DefaultStyle.css
+++ b/CSS/DefaultStyle.css
@@ -1,137 +1,159 @@
 :root {
-     --text: rgb(237, 235, 232);
-     --background: rgb(20, 18, 16);
-     --primary: rgb(192, 184, 175);
-     --primary-60: rgba(192, 184, 175, 0.6);
+  --text: rgb(237, 235, 232);
+  --background: rgb(20, 18, 16);
+  --primary: rgb(192, 184, 175);
+  --primary-60: rgba(192, 184, 175, 0.6);
 
-     --secondary: rgb(77, 91, 72);
-     --secondary-60: rgba(77, 91, 72, 0.6);
-     --accent: rgb(121, 150, 123);
+  --secondary: rgb(77, 91, 72);
+  --secondary-60: rgba(77, 91, 72, 0.6);
+  --accent: rgb(121, 150, 123);
 
-     /* card  Colours  Would be an array in JavaScript*/
+  /* card  Colours  Would be an array in JavaScript*/
 }
 
 /* This is a Google font  */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap");
 
 /* Resetting styles */
 * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-     scroll-behavior: smooth;
-     -webkit-font-smoothing: antialiased;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
-     color: var(--text);
-     text-decoration: none;
-
+  color: var(--text);
+  text-decoration: none;
 }
 
 li {
-     list-style: none;
+  list-style: none;
 }
 
 body {
-     font-family: "Lato", sans-serif;
-     height: 100vh;
-     background-color: var(--background);
-     color: var(--text);
-     min-width: 500px;
-     transition: all 200ms ease-in-out;
+  font-family: "Lato", sans-serif;
+  height: 100vh;
+  background-color: var(--background);
+  color: var(--text);
+  min-width: 500px;
+  transition: all 200ms ease-in-out;
 }
-.pageTransition{
-     filter: blur(10px);
+.pageTransition {
+  filter: blur(10px);
 }
 
 .Container {
-     display: grid;
-     height: 100%;
-     grid-template-rows: auto 1fr auto;
-     grid-template-areas: "mainHeader" "mainContent" "manFooter";
-
+  display: grid;
+  height: 100%;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas: "mainHeader" "mainContent" "manFooter";
 }
 
-
-
 .Container .mainHeader .Navigation span {
-     font-family: "Dancing Script", cursive;
-     color: var(--accent);
+  font-family: "Dancing Script", cursive;
+  color: var(--accent);
 }
 
 .Container .mainContent {
-     grid-area: mainContent;
-     width: 100%;
-     height: 100%;
+  grid-area: mainContent;
+  width: 100%;
+  height: 100%;
 }
 
 /* Footer styles */
 .Container .manFooter {
-     grid-area: manFooter;
-     width: 100%;
-     height: 150px;
-     border-top: 2px solid var(--secondary-60);
+  grid-area: manFooter;
+  width: 100%;
+  height: 150px;
+  border-top: 2px solid var(--secondary-60);
 }
 
 /* Header styles */
 .Container .mainHeader {
-     grid-area: mainHeader;
-     position: relative;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     width: 100%;
-     height: 100px;
+  grid-area: mainHeader;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
 
-     background-color: var(--background);
-     
-     border-bottom: 2px solid var(--secondary-60);
+  background-color: var(--background);
 
+  border-bottom: 2px solid var(--secondary-60);
 }
 
 .subHeader {
-     position: relative;
-     display: flex;
-     flex-direction: row;
-     width: 98%;
-
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 98%;
 }
 
 .subHeader .Navigation {
-     flex: 1;
+  flex: 1;
 }
 
 .cartBox {
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     align-items: center;
-     gap: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
 }
 
 .cartBoxA {
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     align-items: center;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .cartBox h3 {
-     font-size: 1.5rem;
-
+  font-size: 1.5rem;
 }
-
 
 /* This is for the main audio */
 .audioMain {
-     visibility: hidden;
+  visibility: hidden;
 }
 
+/* Toast styling */
 
+.toast {
+  position: fixed;
+  z-index: 10;
+  top: 20px;
+  right: 5px;
+  border-radius: 5px;
+  color: var(--background);
+  border: 1.5px solid var(--accent);
+  background-color: var(--text);
+  padding: 15px 25px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateX(0px);
+
+  transition: opacity 0.3s ease-in-out, transform 0.5s ease;
+}
+
+.toast.show {
+  opacity: 1;
+  transform: translateX(-10px);
+  pointer-events: none;
+
+}
+.toast-message {
+  flex: 1;
+}
 
 /* Media queries */
 
-@media only screen and (min-width: 560px) {}
+@media only screen and (min-width: 560px) {
+}
