--- a/CSS/login.css
+++ b/CSS/login.css
@@ -8,7 +8,11 @@
   --secondary-60: rgba(77, 91, 72, 0.6);
   --accent: rgb(121, 150, 123);
 
-  /* card  Colours  Would be an array in JavaScript*/
+  /* Error theme variables */
+  --error: rgb(191, 61, 55);
+  --error-60: rgba(191, 61, 55, 0.6);
+  --error-accent: rgb(234, 95, 85);
+  --error-text: rgb(255, 244, 244);
 }
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap");
@@ -84,5 +88,9 @@ body {
   color: crimson;
   text-align: center;
 }
+
+
+
+
 
 
