--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,3 +1,6 @@
+
+
+
 .product-container {
     display: grid;
     width: 100%;
@@ -47,3 +50,38 @@ video {
     margin: 0 10%;
     padding: 15px 15px;
 }
+
+
+
+
+.toast {
+    position: fixed;
+    z-index: 10;
+    top: 20px;
+    right: 5px;
+    border-radius: 5px;
+    padding: 15px 25px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(0px);
+  
+    transition: opacity 0.3s ease-in-out, transform 0.5s ease;
+  }
+  
+  .toastDefault{
+    color: var(--background);
+    border: 1.5px solid var(--accent);
+    background-color: var(--text);
+  }
+  
+  .toastError {
+    color: var(--error-text);
+    border: 1.5px solid var(--error-accent);
+    background-color: var(--error);
+    box-shadow: 0 0 10px var(--error-60);
+  }
+  
+  
