--- a/CSS/product.css
+++ b/CSS/product.css
@@ -4,11 +4,12 @@
     height: 100%;
     grid-template-columns: 75% 25%;
     gap: 10px;
-   
-   
-    
+
+
+
 }
-.mainContent{
+
+.mainContent {
     padding: 10px;
 }
 
@@ -34,6 +35,19 @@ video {
 
 }
 
+.product-desc {
+    height: 75%;
+}
+
+.product-desc h2 {
+    margin-bottom: 15%;
+    font-size: 1.3rem;
+
+}
+
+.product-desc p {
+    font-size: 1.1rem;
+}
 
 
 
